# OP_KA

./: CMakeLists.txt  MyApp  README.md  main.cpp  program  test.cpp  test.txt
algorithms/: Processing.cpp  Processing.h  Requests.cpp  Requests.h  Sort.cpp  Sort.h
engine/: Screen.cpp  Screen.h
models/: Client.h  Hotel.cpp  Hotel.h  Room.cpp  Room.h
